tests/ui/borrowck/issue-82126-mismatched-subst-and-hir.stderr
error[E0107]: struct takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:16:59
   |
LL | async fn buy_lock(coroutine: &Mutex<MarketMultiplier>) -> LockedMarket<'_> {
   |                                                           ^^^^^^^^^^^^---- help: remove the unnecessary generics
   |                                                           |
   |                                                           expected 0 lifetime arguments
   |
note: struct defined here, with 0 lifetime parameters
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:24:8
   |
LL | struct LockedMarket<T>(T);
   |        ^^^^^^^^^^^^

error[E0107]: struct takes 1 generic argument but 0 generic arguments were supplied
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:16:59
   |
LL | async fn buy_lock(coroutine: &Mutex<MarketMultiplier>) -> LockedMarket<'_> {
   |                                                           ^^^^^^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:24:8
   |
LL | struct LockedMarket<T>(T);
   |        ^^^^^^^^^^^^ -
help: add missing generic argument
   |
LL | async fn buy_lock(coroutine: &Mutex<MarketMultiplier>) -> LockedMarket<'_, T> {
   |                                                                          +++

error[E0107]: struct takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:16:59
   |
LL | async fn buy_lock(coroutine: &Mutex<MarketMultiplier>) -> LockedMarket<'_> {
   |                                                           ^^^^^^^^^^^^---- help: remove the unnecessary generics
   |                                                           |
   |                                                           expected 0 lifetime arguments
   |
note: struct defined here, with 0 lifetime parameters
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:24:8
   |
LL | struct LockedMarket<T>(T);
   |        ^^^^^^^^^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0107]: struct takes 1 generic argument but 0 generic arguments were supplied
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:16:59
   |
LL | async fn buy_lock(coroutine: &Mutex<MarketMultiplier>) -> LockedMarket<'_> {
   |                                                           ^^^^^^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:24:8
   |
LL | struct LockedMarket<T>(T);
   |        ^^^^^^^^^^^^ -
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add missing generic argument
   |
LL | async fn buy_lock(coroutine: &Mutex<MarketMultiplier>) -> LockedMarket<'_, T> {
   |                                                                          +++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0107`.
